# shmd

./: .gitignore  Cargo.toml  config-example.toml  database.rkt  deps.edn  main.rkt  routes.rkt
migrations/00000000000000_diesel_initial_setup/: up.sql
racket-backup/: database.rkt  main.rkt  scanner.rkt
rust-backup/migrations/2022-11-17-064726_create_media/: down.sql  up.sql
rust-backup/src/: db.rs  handlers.rs  main.rs
shmd-server/: Cargo.toml  config.toml
shmd-server/sql/: install.sql
shmd-server/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  queryobjects.rs  routes.rs  scanner.rs
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  queryobjects.rs  routes.rs  scanner.rs  schema.rs
src/shmd/: core.clj  db.clj
